src/styles/Home.module.scss
.intro {
  background: url("/bg.webp");
  background-color: var(--dp-primary) ee;
  background-blend-mode: overlay;
  min-height: 100vh;
  color: var(--dp-dark);
  background-size: cover;
  background-position: bottom;

  .text {
    font-weight: 700;
    font-size: 3rem;

    @media screen and (max-width: 768px) {
      font-size: 2rem;

      padding-top: 2.5rem;
    }
  }

  @media screen and (max-width: 768px) {
    min-height: 70vh;
  }
  video {
    width: 300px;

    @media screen and (max-width: 425px) {
      width: 250px;
    }
  }
  @media screen and (max-width: 425px) {
    min-height: 100vh;
  }
}

